docs-archive/apache-airflow-providers-common-ai/0.3.0/_sources/_api/airflow/providers/common/ai/example_dags/example_llm_file_analysis/index.rst.txt
airflow.providers.common.ai.example_dags.example_llm_file_analysis
==================================================================

.. py:module:: airflow.providers.common.ai.example_dags.example_llm_file_analysis

.. autoapi-nested-parse::

   Example DAGs demonstrating LLMFileAnalysisOperator usage.



Functions
---------

.. autoapisummary::

   airflow.providers.common.ai.example_dags.example_llm_file_analysis.example_llm_file_analysis_basic
   airflow.providers.common.ai.example_dags.example_llm_file_analysis.example_llm_file_analysis_prefix
   airflow.providers.common.ai.example_dags.example_llm_file_analysis.example_llm_file_analysis_multimodal
   airflow.providers.common.ai.example_dags.example_llm_file_analysis.example_llm_file_analysis_structured
   airflow.providers.common.ai.example_dags.example_llm_file_analysis.example_llm_file_analysis_decorator


Module Contents
---------------

.. py:function:: example_llm_file_analysis_basic()

.. py:function:: example_llm_file_analysis_prefix()

.. py:function:: example_llm_file_analysis_multimodal()

.. py:function:: example_llm_file_analysis_structured()

.. py:function:: example_llm_file_analysis_decorator()

